# serializer version: 1
# name: test_project_open
  _CallList([
    _Call(
      '',
      tuple(
        'TMP_PATH_HERE/path/to/some project/some project.rpp',
      ),
      dict({
      }),
    ),
  ])
# ---
# name: test_project_render
  dict({
    'get': _CallList([
      _Call(
        '',
        tuple(
          'http://localhost:2307/_/42230',
        ),
        dict({
          'timeout': ClientTimeout(total=3600, connect=None, sock_read=None, sock_connect=None, ceil_threshold=5),
        }),
      ),
    ]),
    'post': _CallList([
    ]),
    'put': _CallList([
    ]),
  })
# ---
